# nrf-secureboot-test

./: README.md
nrf-rust-bootloaders/: README.md
nrf-rust-bootloaders/nrf52840-blinky-app/: Cargo.toml  memory.x
nrf-rust-bootloaders/nrf52840-blinky-app/examples/: blinky.rs
nrf-rust-bootloaders/nrf52840-blinky-app/signatures/pyecdsa_keys/: ecdsa_sign.py  public.pem
nrf-rust-bootloaders/nrf52840-blinky-app/signatures/pyopenssl_keys/: ec-priv.pem  ec-pub.pem  openssl_sign.py  raw_signature_extract.py
nrf-rust-bootloaders/nrf52840-blinky-app/src/: lib.rs
nrf-rust-bootloaders/nrf52840-secure-test-bootloader/: Cargo.toml  build.rs  openocd.gdb
nrf-rust-bootloaders/nrf52840-secure-test-bootloader/bindings/: bindings_cc310_bl.h  nrf_cc310_bl_ecdsa_verify_secp224r1.h
nrf-rust-bootloaders/nrf52840-secure-test-bootloader/src/: bl_cc310.rs  cc310_ecdsa_verify.rs  main.rs
