[package]
name = "nrf52840-securebootloader"
version = "0.1.0"
authors = ["Nihal Pasham <nihal.pasham@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "nrf_cc310_bl_0.9.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
nrf52840-hal = "0.10.0"
cty = "0.2.1" 

[build-dependencies]
bindgen = "0.54.0"

[features]
# inline-asm = ["cortex-m/inline-asm"]

[profile.release]
debug = true
# lto = true
# opt-level = "s"